--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ TOKEN_AMOUNT=100000000000000000
 PRIVATE_KEY=
 ERC20_TOKEN=
 
+CFXTEST_REGISTER="cfxtest:accsnp4mphxrugd51yb8htkpfwsng2g6v6t2gc0bje"
+CFXMAIN_REGISTER=""
+
 # DAI mirror in Kovan
 #ERC20_TOKEN=0xd2b1a6b34f4a68425e7c28b4db5a37be3b7a4947
 # the block when 0x90F8bf6A479f320ead074411a4B0e7944Ea8c9C1 has some DAI is 13146218
