--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,9 @@ TOKEN_AMOUNT=100000000000000000
 PRIVATE_KEY=
 ERC20_TOKEN=
 
-CFXTEST_REGISTER="cfxtest:achptmtf5jt5j5629t761rb87dg5zapbjp7sccscvu"
+VERSION="v2.0"
+
+CFXTEST_REGISTER="cfxtest:achm3rc1a7ya4vfjbzn8sfs41zexhjuvfp76d32zv0"
 CFXMAIN_REGISTER=""
 
 # DAI mirror in Kovan
